# single_frame_detector

./: README.md  pyproject.toml
single_frame_detector/: __main__.py  detector.py
