[tool.poetry]
name = "single-frame-detector"
version = "1.0.0"
description = "Detect strange single frames in video."
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
av = "^9.1.1"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
